<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">北邮校园网自动登录</string>
    <string name="txt_username">用户: </string>
    <string name="txt_passwd">密码: </string>
    <string name="txt_line">____________</string>
    <string name="pref_name">AuthBuptGW</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_enable">启  用</string>
    <string name="btn_disable">禁  用</string>
    <string name="btn_settings">设  置</string>
    <string name="btn_wifi_on">Wifi On</string>
    <string name="btn_wifi_off">Wifi Off</string>
    <string name="btn_quit">退  出</string>
    <string name="btn_about">关  于</string>
    <string name="msg_ssid">无线热点: </string>
    <string name="msg_ip_addr">WiFi网络IP地址: </string>
    <string name="msg_login_ok">登录成功!</string>
    <string name="msg_login_fail">登录失败!</string>
    <string name="msg_login_disabled">登录未启用!</string>
    <string name="msg_wifi_fail">WiFi已关闭!</string>
    <string name="msg_wifi_ssid_fail">[未获取]</string>
    <string name="msg_wifi_change_on">开启WIFI网络中......</string>
    <string name="msg_wifi_change_off">关闭WIFI网络中......</string>
    <string name="msg_network_ok">互联网正常!</string>
    <string name="msg_network_fail">互联网不可用!</string>
    <string name="msg_login">登录中......</string>
    <string name="msg_logout">未登录.</string>
    <string name="URL_LOGIN">http://gw.bupt.edu.cn</string>
    <string name="URL_LOGOUT">http://gw.bupt.edu.cn/F.htm</string>
    <string name="URL_RELOGIN">http://gw.bupt.edu.cn/a11.htm</string>
    <string name="URL_CHECK_NETWORK">http://m.baidu.com</string>
    <string name="URL_CHECK_CONTENT">京ICP证030173号</string>
    <string name="URL_CHECK_NETWORK1">http://m.sogou.com</string>
    <string name="URL_CHECK_CONTENT1">搜狗</string>
    <string name="title_about">关于</string>
    <string name="txt_about">北邮校园网自动登录工具\n AuthBuptGW (ver VERSION_NAME ) \n yinqingwang@gmail.com \n 8th December, 2014</string>
</resources>
