<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TableLayout
        android:id="@+id/layout_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_username" />

            <EditText
                android:id="@+id/txt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow android:layout_marginTop="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_passwd" />

            <EditText
                android:id="@+id/txt_passwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow android:layout_marginTop="10dp" >

            <CheckBox
                android:id="@+id/chkbtn_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ToggleButton
                android:id="@+id/btn_enable_disable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/btn_enable"
                android:textOn="@string/btn_disable" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp" >

            <TextView />

            <Button
                android:id="@+id/btn_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_about" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F7FE2E" />

    </LinearLayout>

    <TextView
        android:id="@+id/login_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="" />

</LinearLayout>